--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -3,7 +3,7 @@
 on:
   push:
   schedule:
-    - cron: "0 17 * * *" # daily at noon/11a Central.
+    - cron: "0 20 * * *" # daily at 3p/4p Central.
 jobs:
   run:
     runs-on: ubuntu-latest
