--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,5 +1,4 @@
-# .github/workflows/treebeard.yml
-# Run all notebooks on every push and daily
+# Run notebook on every push and daily
 on:
   push:
   schedule:
@@ -14,19 +13,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install papermill ipykernel
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - uses: yaananth/run-notebook@v1
-      env:
-        RUNNER: ${{ toJson(runner) }}
-        SECRETS: ${{ toJson(secrets) }}
-        GITHUB: ${{ toJson(github) }}
-      with:
-        notebook: "DunnCounty_COVID19.ipynb"
-        params: "params.json"
-        isReport: True
-    - name: move notebook
+    - name: Execute notebook
       run: |
-        cp /home/runner/work/_temp/nb-runner/DunnCounty_COVID19.ipynb .
+        papermill DunnCounty_COVID19.ipynb DunnCounty_COVID19.ipynb
     - name: Commit and push files
       run: |
         git config --local user.email "action@github.com"
